<resources>
    <string name="app_name">RemindME</string>

    <!-- Recyclerview item -->
    <string name="recyclerview_title"> Title </string>
    <string name="recyclerview_day"> DD </string>
    <string name="recyclerview_month"> MM </string>
    <string name="recyclerview_difficulty"> Difficulty: X </string>
    <string name="recyclerview_remainingTime"> X days left </string>

    <!-- Add Content Page & Details page -->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="difficulty">Difficulty</string>
    <string name="dueDate">Due Date</string>
    <string name="remindME">RemindME</string>
    <string name="save">Save</string>

    <!-- Home Fragment -->
    <string name="selfReward"> Proud of you \n All the task completed </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>