<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/contentCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="4">

                    <!-- Konten dalam card-->
                    <TextView
                        android:id="@+id/monthTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="17dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="17dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/recyclerview_month"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/dayTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="17dp"
                        android:layout_marginRight="17dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/recyclerview_day"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textSize="24dp" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="65dp"
                    android:background="#40BFAFB2"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/titleTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/recyclerview_title"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textSize="22dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/difficultyTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="9dp"
                            android:layout_weight="1.25"
                            android:fontFamily="@font/open_sans"
                            android:text="@string/recyclerview_difficulty"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            android:textSize="12dp" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:src="@drawable/ic_time" />

                        <TextView
                            android:id="@+id/timeRemainingTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="9dp"
                            android:layout_weight="1.25"
                            android:fontFamily="@font/open_sans"
                            android:text="@string/recyclerview_remainingTime"
                            android:textSize="12dp" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="6dp"
                    android:layout_height="match_parent"
                    android:background="@color/secondary" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>